force-app/main/default/objects/WorkOrder/fields/WO_ControleDesPressions__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesPressions__c</fullName>
    <description>Contrôle des pressions</description>
    <inlineHelpText>Contrôle des pressions</inlineHelpText>
    <label>Ctrle des pressions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>