force-app/main/default/objects/WorkOrder/fields/WO_ControleDesSecurites__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesSecurites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôles des sécurités</description>
    <inlineHelpText>Contrôles des sécurités</inlineHelpText>
    <label>Contrôles des sécurités</label>
    <type>Checkbox</type>
</CustomField>