force-app/main/default/objects/WorkOrder/fields/WO_ControleDesSecuritesDeSurchauffe__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesSecuritesDeSurchauffe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle des sécurités de surchauffe</description>
    <inlineHelpText>Contrôle des sécurités de surchauffe</inlineHelpText>
    <label>Contrôle des sécurités de surchauffe</label>
    <type>Checkbox</type>
</CustomField>