force-app/main/default/objects/WorkOrder/fields/WO_ControleDesSecuritesEffectue__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesSecuritesEffectue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ctrle des sécurités fait</label>
    <type>Checkbox</type>
</CustomField>