force-app/main/default/objects/WorkOrder/fields/WO_ControleDesSondesThermocouples__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleDesSondesThermocouples__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle des sondes thermocouples</description>
    <inlineHelpText>Contrôle des sondes thermocouples</inlineHelpText>
    <label>Contrôle des sondes thermocouples</label>
    <type>Checkbox</type>
</CustomField>