force-app/main/default/objects/WorkOrder/fields/WO_ControleElectrodesdAllumage__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleElectrodesdAllumage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle électrodes d’allumage, cellule et nettoyage du verre</description>
    <inlineHelpText>Contrôle électrodes d’allumage, cellule et nettoyage du verre</inlineHelpText>
    <label>Contrôle électrodes d’allumage</label>
    <type>Checkbox</type>
</CustomField>