force-app/main/default/objects/WorkOrder/fields/WO_ControleEtatDesCablesHT__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleEtatDesCablesHT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de l’état des câbles H.T.</description>
    <inlineHelpText>Contrôle de l’état des câbles H.T.</inlineHelpText>
    <label>Contrôle de l’état des câbles H.T.</label>
    <type>Checkbox</type>
</CustomField>