force-app/main/default/objects/WorkOrder/fields/WO_ControleEtatGeneralEventuelsDommages__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleEtatGeneralEventuelsDommages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de l&apos;état général et des éventuels dommages</description>
    <inlineHelpText>Contrôle de l&apos;état général et des éventuels dommages</inlineHelpText>
    <label>Contrôle état général, éventuels dommage</label>
    <type>Checkbox</type>
</CustomField>