force-app/main/default/objects/WorkOrder/fields/WO_ControleEtatInterieurToursCeramiques__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleEtatInterieurToursCeramiques__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de l’état intérieur des tours (céramiques)</description>
    <inlineHelpText>Contrôle de l’état intérieur des tours (céramiques)</inlineHelpText>
    <label>Contrôle état intérieur tours céramiques</label>
    <type>Checkbox</type>
</CustomField>