force-app/main/default/objects/WorkOrder/fields/WO_ControleEtEssaiElementsDeSecurite__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleEtEssaiElementsDeSecurite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle et essai des éléments de sécurité</description>
    <inlineHelpText>Contrôle et essai des éléments de sécurité</inlineHelpText>
    <label>Contrôle et essai éléments de sécurité</label>
    <type>Checkbox</type>
</CustomField>