force-app/main/default/objects/WorkOrder/fields/WO_ControleEtEssaisDesAppareils__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleEtEssaisDesAppareils__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle et essais des appareils indicateurs et de sécurité</description>
    <inlineHelpText>Contrôle et essais des appareils indicateurs et de sécurité</inlineHelpText>
    <label>Contrôle et essais des appareils</label>
    <type>Checkbox</type>
</CustomField>