force-app/main/default/objects/WorkOrder/fields/WO_ControleEtReglageReglementaire__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleEtReglageReglementaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle et réglage de combustion, dans le respect notamment des articles R224-16 à R224-41 de la partie réglementaire du Code de l&apos;Environnement</description>
    <inlineHelpText>Contrôle et réglage de combustion, dans le respect notamment des articles R224-16 à R224-41 de la partie réglementaire du Code de l&apos;Environnement</inlineHelpText>
    <label>Contrôle et réglage réglementaires</label>
    <type>Checkbox</type>
</CustomField>