force-app/main/default/objects/WorkOrder/fields/WO_ControleFonctionnementGeneral__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleFonctionnementGeneral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle fonctionnement général</description>
    <inlineHelpText>Contrôle fonctionnement général</inlineHelpText>
    <label>Contrôle fonctionnement général</label>
    <type>Checkbox</type>
</CustomField>