force-app/main/default/objects/WorkOrder/fields/WO_ControleFumisterieOuvreau__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleFumisterieOuvreau__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle fumisterie, ouvreau</description>
    <inlineHelpText>Contrôle fumisterie, ouvreau</inlineHelpText>
    <label>Ctrle fumisterie, ouvreau</label>
    <type>Checkbox</type>
</CustomField>