force-app/main/default/objects/WorkOrder/fields/WO_ControleNiveauxPressionEtTemperature__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleNiveauxPressionEtTemperature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle des niveaux, de pression et de température</description>
    <inlineHelpText>Contrôle des niveaux, de pression et de température</inlineHelpText>
    <label>Contrôle niveaux,press et température</label>
    <type>Checkbox</type>
</CustomField>