force-app/main/default/objects/WorkOrder/fields/WO_ControleSecuriteIncendie__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleSecuriteIncendie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle sécurité incendie</description>
    <inlineHelpText>Contrôle sécurité incendie</inlineHelpText>
    <label>Contrôle sécurité incendie</label>
    <type>Checkbox</type>
</CustomField>