force-app/main/default/objects/WorkOrder/fields/WO_ControleSeuilsDeSecuriteEtSecurites__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleSeuilsDeSecuriteEtSecurites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle des seuils de sécurité et des sécurités</description>
    <inlineHelpText>Contrôle des seuils de sécurité et des sécurités</inlineHelpText>
    <label>Contrôle seuils de sécurité et sécurités</label>
    <type>Checkbox</type>
</CustomField>