force-app/main/default/objects/WorkOrder/fields/WO_ControleTransmetteurPressionVentil__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleTransmetteurPressionVentil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle du transmetteur de pression ventilateur : nettoyage des prises de pression.</description>
    <inlineHelpText>Contrôle du transmetteur de pression ventilateur : nettoyage des prises de pression.</inlineHelpText>
    <label>Contrôle du transmetteur de pression</label>
    <type>Checkbox</type>
</CustomField>