force-app/main/default/objects/WorkOrder/fields/WO_ControleTubulureDePriseDePression__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleTubulureDePriseDePression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle de la tubulure de prise de pression vapeur</description>
    <inlineHelpText>Contrôle de la tubulure de prise de pression vapeur</inlineHelpText>
    <label>Contrôle tubulure prise de press vapeur</label>
    <type>Checkbox</type>
</CustomField>