force-app/main/default/objects/WorkOrder/fields/WO_ControleVentilateurEtEtatCourroies__c.field-meta.xml
<CustomField>
    <fullName>WO_ControleVentilateurEtEtatCourroies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrôle du ventilateur et de l’état des courroies</description>
    <inlineHelpText>Contrôle du ventilateur et de l’état des courroies</inlineHelpText>
    <label>Contrôle ventilateur et état courroies</label>
    <type>Checkbox</type>
</CustomField>