force-app/main/default/objects/WorkOrder/fields/WO_CreancesEchues__c.field-meta.xml
<CustomField>
    <fullName>WO_CreancesEchues__c</fullName>
    <formula>IF( NOT(ISBLANK(FSL_WO_Commande__c)), FSL_WO_Commande__r.ORD_CompteFacture__r.ACC_CreancesEchues__c,  ServiceContract.SC_NomDuCompteDeFacturation__r.ACC_CreancesEchues__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Créances échues de la commande ou du CAT lié(e) à l&apos;intervention.</inlineHelpText>
    <label>Créances échues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>