force-app/main/default/objects/WorkOrder/fields/WO_Creer_une_requete_NC__c.field-meta.xml
<CustomField>
    <fullName>WO_Creer_une_requete_NC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Créer une requête Non Conformité</label>
    <type>Checkbox</type>
</CustomField>