force-app/main/default/objects/WorkOrder/fields/WO_CycleRegenerationsM3__c.field-meta.xml
<CustomField>
    <fullName>WO_CycleRegenerationsM3__c</fullName>
    <label>Cycle régénérations (m3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>