force-app/main/default/objects/WorkOrder/fields/WO_DebitFioulKgH100__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitFioulKgH100__c</fullName>
    <description>Débit fioul Kg/h (100%)</description>
    <inlineHelpText>Débit fioul Kg/h (100%)</inlineHelpText>
    <label>3-Débit fioul Kg/h</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>