force-app/main/default/objects/WorkOrder/fields/WO_DebitFioulKgH50__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitFioulKgH50__c</fullName>
    <description>Débit fioul Kg/h (50%)</description>
    <inlineHelpText>Débit fioul Kg/h (50%)</inlineHelpText>
    <label>2-Débit fioul Kg/h</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>