force-app/main/default/objects/WorkOrder/fields/WO_DebitFioulKgH__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitFioulKgH__c</fullName>
    <description>Débit fioul Kg/h</description>
    <inlineHelpText>Débit fioul Kg/h</inlineHelpText>
    <label>1-Débit fioul Kg/h</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>