force-app/main/default/objects/WorkOrder/fields/WO_DebitGazNm3H100__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitGazNm3H100__c</fullName>
    <description>Débit Gaz Nm3/h (100%)</description>
    <inlineHelpText>Débit Gaz Nm3/h (100%)</inlineHelpText>
    <label>3-Débit Gaz Nm3/h</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>