force-app/main/default/objects/WorkOrder/fields/WO_DebitGazNm3H50__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitGazNm3H50__c</fullName>
    <description>Débit Gaz Nm3/h (50%)</description>
    <inlineHelpText>Débit Gaz Nm3/h (50%)</inlineHelpText>
    <label>2-Débit Gaz Nm3/h</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>