force-app/main/default/objects/WorkOrder/fields/WO_DebitGazNm3H__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitGazNm3H__c</fullName>
    <description>Débit Gaz Nm3/h</description>
    <inlineHelpText>Débit Gaz Nm3/h</inlineHelpText>
    <label>1-Débit Gaz Nm3/h</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>