force-app/main/default/objects/WorkOrder/fields/WO_DebitPompeDoseuse1LH__c.field-meta.xml
<CustomField>
    <fullName>WO_DebitPompeDoseuse1LH__c</fullName>
    <description>Débit pompe doseuse 1 (l/h)</description>
    <inlineHelpText>Débit pompe doseuse 1 (l/h)</inlineHelpText>
    <label>Déb. pompe doseuse 1 (l/h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>