force-app/main/default/objects/WorkOrder/fields/WO_DemandeDeDevisAeffectuer__c.field-meta.xml
<CustomField>
    <fullName>WO_DemandeDeDevisAeffectuer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande de devis à effectuer</label>
    <type>Checkbox</type>
</CustomField>