force-app/main/default/objects/WorkOrder/fields/WO_DemandeSpecifiqueDuClientEnDateDu__c.field-meta.xml
<CustomField>
    <fullName>WO_DemandeSpecifiqueDuClientEnDateDu__c</fullName>
    <formula>Case.Contact.FirstName 
&amp;&quot; &quot;&amp;
Case.Contact.LastName 
&amp;&quot;,&quot;&amp;&quot; &quot;&amp;
TEXT(Case.Origin)
&amp;&quot;,&quot;&amp;&quot; &quot;&amp;
LEFT(TEXT(Case.CreatedDate), 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date requête client</label>
    <type>Text</type>
</CustomField>