force-app/main/default/objects/WorkOrder/fields/WO_DemontageBruleur__c.field-meta.xml
<CustomField>
    <fullName>WO_DemontageBruleur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Démontage brûleur</description>
    <inlineHelpText>Démontage brûleur</inlineHelpText>
    <label>Démontage brûleur</label>
    <type>Checkbox</type>
</CustomField>