force-app/main/default/objects/WorkOrder/fields/WO_DemontageDesAllumeursEtNettoyage__c.field-meta.xml
<CustomField>
    <fullName>WO_DemontageDesAllumeursEtNettoyage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Démontage des allumeurs et nettoyage</description>
    <inlineHelpText>Démontage des allumeurs et nettoyage</inlineHelpText>
    <label>Démontage des allumeurs et nettoyage</label>
    <type>Checkbox</type>
</CustomField>