force-app/main/default/objects/WorkOrder/fields/WO_DemontageNettoyageAllumeursElectrodes__c.field-meta.xml
<CustomField>
    <fullName>WO_DemontageNettoyageAllumeursElectrodes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Démontage et nettoyage des allumeurs et électrodes d&apos;allumage</description>
    <inlineHelpText>Démontage et nettoyage des allumeurs et électrodes d&apos;allumage</inlineHelpText>
    <label>Démontage nettoyage allumeurs,électrodes</label>
    <type>Checkbox</type>
</CustomField>