force-app/main/default/objects/WorkOrder/fields/WO_DemontageNettoyageMecaniquesBruleurs__c.field-meta.xml
<CustomField>
    <fullName>WO_DemontageNettoyageMecaniquesBruleurs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Démontage complet des parties mécaniques du brûleur, Nettoyage complet.</description>
    <inlineHelpText>Démontage complet des parties mécaniques du brûleur, Nettoyage complet.</inlineHelpText>
    <label>Démontage nettoyage mécaniques brûleurs</label>
    <type>Checkbox</type>
</CustomField>