force-app/main/default/objects/WorkOrder/fields/WO_Description_Non_conformit__c.field-meta.xml
<CustomField>
    <fullName>WO_Description_Non_conformit__c</fullName>
    <inlineHelpText>Description de la non conformité</inlineHelpText>
    <label>Description - Non conformité</label>
    <type>TextArea</type>
</CustomField>