force-app/main/default/objects/WorkOrder/fields/WO_Description_non_conformite__c.field-meta.xml
<CustomField>
    <fullName>WO_Description_non_conformite__c</fullName>
    <label>Description non conformité</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>