force-app/main/default/objects/WorkOrder/fields/WO_DetectionDelEntartrage__c.field-meta.xml
<CustomField>
    <fullName>WO_DetectionDelEntartrage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Détection de l’entartrage</description>
    <inlineHelpText>Détection de l’entartrage</inlineHelpText>
    <label>Détection de l&apos;entartrage</label>
    <type>Checkbox</type>
</CustomField>