force-app/main/default/objects/WorkOrder/fields/WO_DeviReferent__c.field-meta.xml
<CustomField>
    <fullName>WO_DeviReferent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis référent</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>