force-app/main/default/objects/WorkOrder/fields/WO_Diminuer_dosage_prd_reduct_Oxygene__c.field-meta.xml
<CustomField>
    <fullName>WO_Diminuer_dosage_prd_reduct_Oxygene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diminuer dosage prod réducteur Oxygène</label>
    <type>Checkbox</type>
</CustomField>