force-app/main/default/objects/WorkOrder/fields/WO_Diminuer_dosage_produit_phosphatant__c.field-meta.xml
<CustomField>
    <fullName>WO_Diminuer_dosage_produit_phosphatant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diminuer dosage produit phosphatant</label>
    <type>Checkbox</type>
</CustomField>