force-app/main/default/objects/WorkOrder/fields/WO_Donnees_d_affaire__c.field-meta.xml
<CustomField>
    <fullName>WO_Donnees_d_affaire__c</fullName>
    <label>Données d&apos;affaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>