force-app/main/default/objects/WorkOrder/fields/WO_DonneesDAffaire__c.field-meta.xml
<CustomField>
    <fullName>WO_DonneesDAffaire__c</fullName>
    <description>Ce champ affiche automatiquement la Donnée d&apos;Affaire du CAT si un CAT est renseigné, ou affichera à contrario la Donnée d&apos;Affaire de la Commande.</description>
    <formula>IF(
				NOT(ISBLANK(ServiceContractId)),ServiceContract.SC_DonneesDAffaire__c,FSL_WO_Commande__r.ORD_DonneesDAffaire__c
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ce champ affiche automatiquement la Donnée d&apos;Affaire du CAT si un CAT est renseigné, ou affichera à contrario la Donnée d&apos;Affaire de la Commande.</inlineHelpText>
    <label>Données d&apos;affaire</label>
    <type>Text</type>
</CustomField>