force-app/main/default/objects/WorkOrder/fields/WO_Dosage2__c.field-meta.xml
<CustomField>
    <fullName>WO_Dosage2__c</fullName>
    <label>Dosage 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>