force-app/main/default/objects/WorkOrder/fields/WO_Eau_brute_chlorure__c.field-meta.xml
<CustomField>
    <fullName>WO_Eau_brute_chlorure__c</fullName>
    <label>Eau brute chlorure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>