force-app/main/default/objects/WorkOrder/fields/WO_EauBachePH__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBachePH__c</fullName>
    <label>Eau bâche pH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>