force-app/main/default/objects/WorkOrder/fields/WO_EauBacheSulfite__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBacheSulfite__c</fullName>
    <label>Eau bâche Sulfite (mg/l)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>