force-app/main/default/objects/WorkOrder/fields/WO_EauBacheT__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBacheT__c</fullName>
    <label>Eau bâche T °C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>