force-app/main/default/objects/WorkOrder/fields/WO_EauBacheTAC__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBacheTAC__c</fullName>
    <label>Eau bâche TAC (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>