force-app/main/default/objects/WorkOrder/fields/WO_EauBacheTH__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBacheTH__c</fullName>
    <label>Eau bâche TH (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>