force-app/main/default/objects/WorkOrder/fields/WO_EauBruteO2__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBruteO2__c</fullName>
    <label>Eau brute O2 (mg/l)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>