force-app/main/default/objects/WorkOrder/fields/WO_EauBruteTAC__c.field-meta.xml
<CustomField>
    <fullName>WO_EauBruteTAC__c</fullName>
    <label>Eau brute TAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>