force-app/main/default/objects/WorkOrder/fields/WO_EauChaudiereConductivite__c.field-meta.xml
<CustomField>
    <fullName>WO_EauChaudiereConductivite__c</fullName>
    <label>Eau chaudière Conductivité (µS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>