force-app/main/default/objects/WorkOrder/fields/WO_EauChaudierePH__c.field-meta.xml
<CustomField>
    <fullName>WO_EauChaudierePH__c</fullName>
    <label>Eau chaudière pH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>