force-app/main/default/objects/WorkOrder/fields/WO_EauChaudiereSiO2__c.field-meta.xml
<CustomField>
    <fullName>WO_EauChaudiereSiO2__c</fullName>
    <label>Eau chaudière SiO2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>