force-app/main/default/objects/WorkOrder/fields/WO_EauChaudiereSulfite__c.field-meta.xml
<CustomField>
    <fullName>WO_EauChaudiereSulfite__c</fullName>
    <label>Eau chaudière Sulfite (mg/l)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>