force-app/main/default/objects/WorkOrder/fields/WO_EauChaudiereTA__c.field-meta.xml
<CustomField>
    <fullName>WO_EauChaudiereTA__c</fullName>
    <label>Eau chaudière TA (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>