force-app/main/default/objects/WorkOrder/fields/WO_EauChaudiereTAC__c.field-meta.xml
<CustomField>
    <fullName>WO_EauChaudiereTAC__c</fullName>
    <label>Eau chaudière TAC (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>