force-app/main/default/objects/WorkOrder/fields/WO_EauTraiteeChlorure__c.field-meta.xml
<CustomField>
    <fullName>WO_EauTraiteeChlorure__c</fullName>
    <label>Eau traitée Chlorure (mg/l)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>