force-app/main/default/objects/WorkOrder/fields/WO_EauTraiteeO2__c.field-meta.xml
<CustomField>
    <fullName>WO_EauTraiteeO2__c</fullName>
    <label>Eau traitée O2 (mg/l)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>