force-app/main/default/objects/WorkOrder/fields/WO_EauTraiteePH__c.field-meta.xml
<CustomField>
    <fullName>WO_EauTraiteePH__c</fullName>
    <label>Eau traitée pH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>