force-app/main/default/objects/WorkOrder/fields/WO_EauTraiteeTAC__c.field-meta.xml
<CustomField>
    <fullName>WO_EauTraiteeTAC__c</fullName>
    <label>Eau traitée TAC (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>