force-app/main/default/objects/WorkOrder/fields/WO_EauTraiteeTH__c.field-meta.xml
<CustomField>
    <fullName>WO_EauTraiteeTH__c</fullName>
    <label>Eau traitée TH (°f)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>