force-app/main/default/objects/WorkOrder/fields/WO_EssaiEnTestReelDeLaChaudiere__c.field-meta.xml
<CustomField>
    <fullName>WO_EssaiEnTestReelDeLaChaudiere__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Essai en test réel, avec arrêt de la chaudière, des sondes de détection de niveau, de conductivité détection de flamme et du pressostat de sécurité</description>
    <inlineHelpText>Essai en test réel, avec arrêt de la chaudière, des sondes de détection de niveau, de conductivité détection de flamme et du pressostat de sécurité</inlineHelpText>
    <label>Essai en test réel de la chaudière</label>
    <type>Checkbox</type>
</CustomField>