force-app/main/default/objects/WorkOrder/fields/WO_EssaisAppareilsDeControleEtSecurite__c.field-meta.xml
<CustomField>
    <fullName>WO_EssaisAppareilsDeControleEtSecurite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Essais des appareils de contrôle et de sécurité</description>
    <inlineHelpText>Essais des appareils de contrôle et de sécurité</inlineHelpText>
    <label>Essais appareils de contrôle et sécurité</label>
    <type>Checkbox</type>
</CustomField>