force-app/main/default/objects/WorkOrder/fields/WO_ExamenEtMiseaJourLivretChaufferie__c.field-meta.xml
<CustomField>
    <fullName>WO_ExamenEtMiseaJourLivretChaufferie__c</fullName>
    <description>Examen et mise à jour du livret de chaufferie</description>
    <inlineHelpText>Examen et mise à jour du livret de chaufferie</inlineHelpText>
    <label>Examen et mise à jour livret chaufferie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>