force-app/main/default/objects/WorkOrder/fields/WO_ExtractionDeFond__c.field-meta.xml
<CustomField>
    <fullName>WO_ExtractionDeFond__c</fullName>
    <description>Extraction de fond</description>
    <inlineHelpText>Extraction de fond</inlineHelpText>
    <label>Extraction de fond</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>