force-app/main/default/objects/WorkOrder/fields/WO_FermetureEauEtFeuRefectionJoints__c.field-meta.xml
<CustomField>
    <fullName>WO_FermetureEauEtFeuRefectionJoints__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fermeture côté eau et côté feur, réfection des joints et remplissage</description>
    <inlineHelpText>Fermeture côté eau et côté feur, réfection des joints et remplissage</inlineHelpText>
    <label>Fermeture eau et feu réfection joints</label>
    <type>Checkbox</type>
</CustomField>