force-app/main/default/objects/WorkOrder/fields/WO_FermetureEtRemiseEnRoute__c.field-meta.xml
<CustomField>
    <fullName>WO_FermetureEtRemiseEnRoute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fermeture et remise en route</description>
    <inlineHelpText>Fermeture et remise en route</inlineHelpText>
    <label>Fermeture et remise en route</label>
    <type>Checkbox</type>
</CustomField>