force-app/main/default/objects/WorkOrder/fields/WO_FrequenceDePurge__c.field-meta.xml
<CustomField>
    <fullName>WO_FrequenceDePurge__c</fullName>
    <description>Fréquence de purge</description>
    <inlineHelpText>Fréquence de purge</inlineHelpText>
    <label>Fréquence de purge</label>
    <type>TextArea</type>
</CustomField>