force-app/main/default/objects/WorkOrder/fields/WO_InspectionBruleurEtCircuitdAllumage__c.field-meta.xml
<CustomField>
    <fullName>WO_InspectionBruleurEtCircuitdAllumage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inspection du brûleur et du circuit d&apos;allumage</description>
    <inlineHelpText>Inspection du brûleur et du circuit d&apos;allumage</inlineHelpText>
    <label>Inspection brûleur et circuit d&apos;allumage</label>
    <type>Checkbox</type>
</CustomField>