force-app/main/default/objects/WorkOrder/fields/WO_InspectionChambreDeCombustion__c.field-meta.xml
<CustomField>
    <fullName>WO_InspectionChambreDeCombustion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inspection de la chambre de combustion, des réfractaires, du serpentin dans ses parties visibles</description>
    <inlineHelpText>Inspection de la chambre de combustion, des réfractaires, du serpentin dans ses parties visibles</inlineHelpText>
    <label>Inspection chambre de combustion</label>
    <type>Checkbox</type>
</CustomField>