force-app/main/default/objects/WorkOrder/fields/WO_InspectionNettoyageOrganesDuBruleur__c.field-meta.xml
<CustomField>
    <fullName>WO_InspectionNettoyageOrganesDuBruleur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inspection et nettoyage des organes du brûleur</description>
    <inlineHelpText>Inspection et nettoyage des organes du brûleur</inlineHelpText>
    <label>Inspection nettoyage organes du bruleur</label>
    <type>Checkbox</type>
</CustomField>