force-app/main/default/objects/WorkOrder/fields/WO_Lancer_regeneration_manuelle__c.field-meta.xml
<CustomField>
    <fullName>WO_Lancer_regeneration_manuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lancer une régénération manuelle</label>
    <type>Checkbox</type>
</CustomField>