force-app/main/default/objects/WorkOrder/fields/WO_MaintenanceAnnuelleDuBruleur__c.field-meta.xml
<CustomField>
    <fullName>WO_MaintenanceAnnuelleDuBruleur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maintenance annuelle du brûleur</description>
    <inlineHelpText>Maintenance annuelle du brûleur</inlineHelpText>
    <label>Maintenance annuelle du brûleur</label>
    <type>Checkbox</type>
</CustomField>