force-app/main/default/objects/WorkOrder/fields/WO_MaterielExploitableSousReserves__c.field-meta.xml
<CustomField>
    <fullName>WO_MaterielExploitableSousReserves__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le matériel peut être exploité sous réserves des remarques et consignes ci-après.</description>
    <inlineHelpText>Le matériel peut être exploité sous réserves des remarques et consignes ci-après.</inlineHelpText>
    <label>Matériel exploitable sous réserves</label>
    <type>Checkbox</type>
</CustomField>