force-app/main/default/objects/WorkOrder/fields/WO_MotifInterventionSurAffaireCloturee__c.field-meta.xml
<CustomField>
    <fullName>WO_MotifInterventionSurAffaireCloturee__c</fullName>
    <label>Motif intervention sur affaire clôturée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantie</fullName>
            </value>
            <value>
                <fullName>Dépense sur affaire clôturée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>